# pldi25-artifact

./: .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml  test.yml
argus-study/: .rustfmt.toml  flake.nix
argus-study/.github/workflows/: ci.yml
argus-study/crates/axum-0/: Cargo.toml
argus-study/crates/bevy-0/: Cargo.toml
argus-study/crates/brew/: Cargo.toml
argus-study/crates/brew-macros/: Cargo.toml
argus-study/crates/diesel-0/: Cargo.toml
argus-study/crates/galaxy-0/: Cargo.toml
argus-study/crates/galaxy-1/: Cargo.toml
argus-study/crates/galaxy-3/: Cargo.toml
argus-study/crates/greenhouse-0/: Cargo.toml
argus-study/crates/greenhouse-1/: Cargo.toml
argus-study/crates/greenhouse-2/: Cargo.toml
argus-study/crates/numerical-macros/: Cargo.toml
argus-study/crates/space-macros/: Cargo.toml
argus-study/extra-tasks/axum-2/: Cargo.toml
argus-study/extra-tasks/axum-2/src/: main.rs
argus-study/extra-tasks/diesel-2/: Cargo.toml
argus-study/extra-tasks/diesel-2/src/: auth.rs  cli.rs  comment.rs  editor.rs  main.rs  pagination.rs  post.rs  test_helpers.rs
evaluation/: EvalUtil.jl  flake.nix  notebook.jl
evaluation/.direnv/: flake-profile-5-link
evaluation/data/: CEL-Trait-Debugging - Responses.csv  CEL-Trait-Debugging - Task2.csv  Will's Copy of CEL-Trait-Debugging - Task1.csv  Will's Copy of CEL-Trait-Debugging - Task2.csv  Will's Copy of CEL-Trait-Debugging - Task4.csv  heuristic-precision[depth].csv  heuristic-precision[inertia].csv  heuristic-precision[rust].csv  heuristic-precision[vars].csv
(+81 files in other folders)
