[package]
name = "diesel-2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
argon2 = "0.5.0"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
diesel = { version = "=2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
clap = { version = "4.2.7", features = ["derive"] }
tempfile = "3.1.0"

[dev-dependencies]
assert_matches = "1.1"
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
lazy_static = "1.0"